[tool.poetry]
name = "fast-api-file-upload"
version = "0.1.0"
description = "This is a fastapi file upload"
authors = ["Nwaru Chidubem Theresa <tessychidubem@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.110.1"}
uvicorn = "^0.29.0"
motor = "^3.4.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
bcrypt = "4.0.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cyptography"], version = "^3.3.0"}
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"
pymongo = "^4.6.3"
python-multipart = "^0.0.9"
sqlmodel = "^0.0.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
