[tool.poetry]
name = "fast-api-file-upload"
version = "0.1.0"
description = "This is a fastapi file upload"
authors = ["Nwaru Chidubem Theresa <tessychidubem@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
sqlalchemy = "^2.0.29"
sqlmodel = "^0.0.16"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
